--- a/css/style.css
+++ b/css/style.css
@@ -59,13 +59,8 @@ body {
   margin-right: auto;
   /*outline: 1px solid #4d5ae5;*/
 }
-@media screen and (min-width: 320px) {
-  .container {
-    width: 280px;
-    /*outline: 1px solid tomato;*/
-  }
-}
-@media screen and (min-width: 480px) {
+
+@media screen and (min-width: 428px) {
   .container {
     width: 428px;
     /*outline: 1px solid tomato;*/
@@ -83,6 +78,12 @@ body {
     /*outline: 1px solid tomato;*/
   }
 }
+/*@media screen and (max-width: 427px) {
+  .container {
+    width: 320px;
+    outline: 1px solid tomato;
+  }
+}*/
 
 /*-------------хедер----------------------------------*/
 
@@ -165,7 +166,11 @@ body {
 .course-cleaning {
   font-style: normal;
 }
-
+@media screen and (max-width: 1199px) {
+  .livsd {
+    margin-bottom: 12px;
+  }
+}
 @media screen and (max-width: 767px) {
   .menu {
     display: none;
@@ -175,9 +180,10 @@ body {
   }
 }
 @media screen and (max-width: 427px) {
-  .container {
-    margin-left: auto;
-    margin-right: auto;
+  .page-header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 }
 /*---------------------------планшет-----------------*/
@@ -197,11 +203,7 @@ body {
     display: none;
   }
 }
-@media screen and (max-width: 1199px) {
-  .livsd {
-    margin-bottom: 12px;
-  }
-}
+
 /*---------------------------/планшет-----------------*/
 
 /*---------------------------комп-----------------*/
@@ -219,6 +221,16 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
   }
+  .menu-lin::after {
+    content: "";
+    position: absolute;
+    display: flex;
+    width: 48px;
+    height: 4px;
+    background-color: var(--accent-color);
+    border-radius: 2px;
+    margin-top: 13px;
+  }
 }
 /*---------------------------/комп-----------------*/
 /*-------------/хедер----------------------------------*/
@@ -229,7 +241,6 @@ body {
     position: fixed;
     width: 100%;
     height: 100%;
-    max-height: 796px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -269,12 +280,20 @@ body {
     border: none;
     padding: 0;
     line-height: 0;
+    height: 22px;
+    cursor: pointer;
+    margin-left: auto;
+    display: flex;
   }
   .mobile-menu_container {
+    display: flex;
     position: relative;
     padding-left: 40px;
     padding-top: 80px;
     padding-bottom: 40px;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-between;
   }
   .mobile-menu.is-open {
     opacity: 1;
@@ -299,19 +318,27 @@ body {
     color: var(--modal-icon);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-
-  .mobilevids {
-    font-family: "Roboto";
-    font-style: normal;
+  .menu-mobile_linkon {
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.11;
+    line-height: 1.1;
+    letter-spacing: 0.02em;
+    color: var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .mobilevids {
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    color: #404bbf;
+    color: var(--contact-color);
   }
   .telmob {
-    font-family: "Roboto";
+    font-family: "Roboto", sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 36px;
@@ -324,11 +351,11 @@ body {
   .contact-mobile-number {
     font-family: "Roboto", sans-serif;
     font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11px;
     letter-spacing: 0.02em;
-    color: var(--contact-color);
+    color: var(--color-different-style);
   }
 
   .contact-mobile-number:hover,
@@ -369,6 +396,37 @@ body {
   .social-mobile-icon {
     fill: var(--fill-text-color);
   }
+  /*---------для мобілього меню ме--------------------------------*/
+  @media screen and (max-width: 427px) {
+    .mobile-menu_container {
+      padding-left: 20px;
+    }
+    .menu-mobile_linkon {
+      font-size: 20px;
+    }
+    .menu-mobile_link {
+      font-size: 20px;
+    }
+    .contact-mobile-number {
+      font-size: 20px;
+    }
+    .mobilevids {
+      font-size: 14px;
+    }
+    .mobile-list {
+      gap: 30px;
+    }
+    .social-mobile-link {
+      width: 30px;
+      height: 30px;
+    }
+    .social-mobile-icon {
+      width: 15px;
+      height: 15px;
+    }
+  }
+
+  /*-----------------/для мобільного менюме---------------------*/
 
   /*----------------------------/mobile-menu-------------------*/
 }
@@ -379,7 +437,7 @@ body {
     padding-bottom: 112px;*/
   background-color: var(--subtitle-color);
   background-size: cover;
-  /*width: 428;*/
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   background-position: center;
@@ -431,7 +489,6 @@ body {
         rgba(46, 47, 66, 0.7)
       ),
       url("../images/mobile/dark-bg.jpg");
-    width: 428px;
   }
   .main-title {
     font-weight: 700;
@@ -440,6 +497,13 @@ body {
     letter-spacing: 0.02em;
     margin-bottom: 72px;
     max-width: 320px;
+  }
+}
+@media screen and (max-width: 427px) {
+  .main-title {
+    font-family: Roboto;
+    font-weight: 700;
+    font-size: 30px;
   }
 }
 /*---------------------------планшет-----------------*/
@@ -452,7 +516,6 @@ body {
         rgba(46, 47, 66, 0.7)
       ),
       url("../images/tablet/dark-bgtab.jpg");
-    width: 768px;
   }
   .main-title {
     font-weight: 700;
@@ -475,7 +538,6 @@ body {
         rgba(46, 47, 66, 0.7)
       ),
       url("../images/desctop/people-office1.jpg");
-    width: 1200px;
   }
   .main-title {
     max-width: 496px;
@@ -525,6 +587,16 @@ body {
     text-align: center;
   }
 }
+@media screen and (max-width: 427px) {
+  .the-third-title {
+    font-size: 30px;
+
+  }
+  .hero-text {
+    font-size: 14px;
+}
+}
+
 /*----------------------мобілка-----------------------*/
 /*---------------------------планшет-----------------*/
 @media screen and (min-width: 768px) {
@@ -565,7 +637,7 @@ body {
     height: 112px;
     border-radius: 4px;
     background-color: var(--fill-text-color);
-    margin-bottom: 24px;
+    margin-bottom: 8px;
   }
   .the-third-title {
     font-weight: 500;
@@ -691,7 +763,7 @@ body {
   gap: 24px;
 }
 @media screen and (max-width: 767px) {
-  .the-third-title {
+  .the-third-titlekom {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -703,15 +775,22 @@ body {
     margin-right: auto;
   }
 }
+@media screen and (max-width: 427px) {
+  .suptitle {
+    font-size: 30px;
+
+  }
+
+}
 /*----------------------мобілка-----------------------*/
 /*---------------------------планшет-----------------*/
 @media screen and (min-width: 768px) {
-  .the-third-title {
+  /*.the-third-title {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-  }
+  }*/
   .ner {
     gap: 64px 24px;
   }
@@ -781,13 +860,28 @@ body {
     width: 190px;
   }
 }
+@media screen and (max-width: 427px) {
+  .social-list-cost{
+    width: 170px;
+  }
+  .social-list-iccost{
+    width: 104px;
+  }
+  .social-listt{
+    gap: 65px 16px;
+  }
+}
+
 /*----------------------/мобілка-----------------------*/
 /*---------------------------планшет-----------------*/
 @media screen and (min-width: 768px) {
   .social-listt {
     gap: 72px 24px;
   }
-  .social-list-item {
+  .social-list-iccost {
+    width: 104px;
+  }
+  .social-list-cost {
     width: 168px;
     flex-basis: calc((100% - 48px) / 3);
   }
@@ -798,9 +892,10 @@ body {
 @media screen and (min-width: 1200px) {
   .social-listt {
     gap: 24px;
-    /*flex-direction: row;*/
+    flex-direction: row;
   }
-  .social-list-item {
+  .social-list-cost {
+    width: 100%;
     flex-basis: calc((100% - 120px) / 6);
   }
 }
@@ -944,7 +1039,7 @@ body {
     margin-bottom: 72px;
   }
   .futerblok {
-    margin-bottom: 72px;
+    /* margin-bottom: 72px;*/
     max-width: 268px;
     margin-left: auto;
     margin-right: auto;
@@ -975,8 +1070,15 @@ body {
   .social-list-item {
     gap: 0;
   }
-}
+  .social-list-icon {
+    width: 24px;
+    height: 24px;
+  }
 
+}
+@media screen and (max-width: 427px) {
+
+}
 /*----------------------/мобілка-----------------------*/
 @media screen and (max-width: 427px) {
   .modal-fut-input {
@@ -1028,10 +1130,11 @@ body {
     width: 1128px;
     justify-content: center;
     gap: 0;
+    margin-left: auto;
+    margin-right: auto;
   }
   .footer-style {
     padding: 100px 0px;
-    padding-left: 156px;
   }
 
   .modal-fut-input {
@@ -1283,28 +1386,27 @@ body {
 
 /*---------/малий екран--------------------------------------*/
 @media screen and (min-device-pixel-ratio: 2),
-screen and (min-resolution: 192dpi),
-screen and (min-resolution: 2dppx) {
-.hero {
-  background-image: url("../images/mobile/dark-bg@2x.jpg");
-}
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url("../images/mobile/dark-bg@2x.jpg");
+  }
 }
 @media screen and (min-device-pixel-ratio: 2),
-screen and (min-resolution: 192dpi),
-screen and (min-resolution: 2dppx) {
-.hero {
-  background-image: url("../images/mobile/dark-bg@2x.jpg");
-}
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url("../images/mobile/dark-bg@2x.jpg");
+  }
 }
 
 @media screen and (min-device-pixel-ratio: 2),
-screen and (min-resolution: 192dpi),
-screen and (min-resolution: 2dppx) {
-.hero {
-  background-image: url("../images/mobile/dark-bg@2x.jpg");
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url("../images/mobile/dark-bg@2x.jpg");
+  }
 }
-}
-
 
 /*
 
@@ -1313,170 +1415,135 @@ screen and (min-resolution: 2dppx) {
 flex-basis: calc((100% - 48px) / 4);
 }
 
-
-
-
-
-.logo{
-
-}
-.logo-style{
-  color: var(--subtitle-color);
-}
-.basement-style-logo{
-
-}
-
-
-
-.social-list-icon{
-
-}
-
-.modal-fut-input-desc{
-
-}
-
-
-
-.modal-fut-input-icon{
-
-}
-
-
 */
-/*.posic{
-    position: relative;
-}*/
-/*
-
-/*
-
-
-
-.page-head{
-        border-bottom: 1px solid var(--cont-col);
+.posic {
+  position: relative;
 }
 
+.page-head {
+  border-bottom: 1px solid var(--cont-col);
+}
 
-
-
-
-
-
-
-
-.emplo{
-    display: block;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.emplo {
+  display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .emplo:hover,
-.emplo:focus{
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+.emplo:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-
-
-
-
-
 .employees-card-content-wra {
-    border: 1px solid var(--cont-col);
-    border-top: none;
-    padding-left: 16px;
-    padding-top: 32px;
-    padding-bottom: 32px;
-    width: 360px;
+  border: 1px solid var(--cont-col);
+  border-top: none;
+  padding-left: 16px;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  width: 360px;
 }
 
-
-
-
-
-.but{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 72px;
-    gap: 24px;
+.but {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 72px;
+  gap: 24px;
 }
-
-
 .first-sectionfut {
-    display: flex;
-    gap: 120px;
+  display: flex;
+  gap: 120px;
 }
-.sect{
-    padding-top: 96px;
+.sect {
+  padding-top: 96px;
 }
 
-.licalcsekost{
-flex-basis: calc((100% - 360px) / 3);
+.licalcsekost {
+  flex-basis: calc((100% - 360px) / 3);
 }
-*/
 
 /*-----------------COMPONENTS----------------------------*/
-/*
-
-
-.suptitle-theme-dark{
-color:var(--contact-color);
+.suptitle-theme-dark {
+  color: var(--contact-color);
 }
 
-
-
-.button-color-first{
-    color: var(--button-font-color);
-    background-color:var(--accent-color);
+.button-color-first {
+  color: var(--button-font-color);
+  background-color: var(--accent-color);
 }
 
-
-.basement-style-logo{
-    color:var(--fill-text-color);
+.basement-style-logo {
+  color: var(--fill-text-color);
 }
 
-
-.two-buttons{
-    padding: 12px 24px;
-    border: 1px solid var(--cont-col);
-    border-radius: 4px;
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    text-align: center;
-    letter-spacing: 0.04em;
-    color:var(--color-different-style);
-    background-color: var(--fill-text-color);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.two-buttons {
+  padding: 12px 24px;
+  border: 1px solid var(--cont-col);
+  border-radius: 4px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: var(--color-different-style);
+  background-color: var(--fill-text-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .two-buttons:hover,
-.two-buttons:focus{
-color: var(--button-font-color);
-background-color: var(--accent-color);
-border-color: var(--accent-color);
-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}*/
-/*-----------------/COMPONENTS----------------------------*/
-/*.overlay{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    transform: translate(0, 100%);
-    font-size: 16px;
-    padding: 40px 32px 0 32px;
-    line-height: 24px;
-    color: var(--fill-text-color);
-    background-color: var(--color-different-style);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.two-buttons:focus {
+  color: var(--button-font-color);
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
-.team-list-img-wrapper{
-    position: relative;
-    overflow: hidden;
+/*-----------------/COMPONENTS----------------------------*/
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  transform: translate(0, 100%);
+  font-size: 16px;
+  padding: 40px 32px 0 32px;
+  line-height: 24px;
+  color: var(--fill-text-color);
+  background-color: var(--color-different-style);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-list-img-wrapper {
+  position: relative;
+  overflow: hidden;
 }
 .emplo:hover .overlay,
- emplo:focus .overlay{
-    transform: translate(0, 0);
-
-}*/
+emplo:focus .overlay {
+  transform: translate(0, 0);
+}
+.employees {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 48px 23px;
+}
+.the-third-titleport {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--subtitle-color);
+  margin-bottom: 8px;
+}
+.hero-textport {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
