--- a/css/style.css
+++ b/css/style.css
@@ -718,6 +718,9 @@ body {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   width: 264px;
 }
+.employees-ca:not(:last-child) {
+  margin-bottom: 72px;
+}
 .employees-card-content-wraper {
   border: 1px solid var(--cont-col);
   border-top: none;
@@ -758,30 +761,33 @@ body {
 .social-list-iconfut {
   fill: var(--fill-text-color);
 }
+
 /*----------------------------мобілка----------------*/
 .social-list {
   gap: 24px;
 }
 @media screen and (max-width: 767px) {
-  .the-third-titlekom {
+  .the-third-titlekom{
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
   }
-  .employees-ca {
+/*.employees-ca {
     margin-left: auto;
     margin-right: auto;
+  }*/
+  .employees-ca:not(:last-child) {
+    margin-bottom: 72px;
   }
+
 }
 @media screen and (max-width: 427px) {
   .suptitle {
     font-size: 30px;
+  }
 
-  }
-  .employees-ca:not(:last-child) {
-    margin-bottom: 72px;
-  }
 }
 /*----------------------мобілка-----------------------*/
 /*---------------------------планшет-----------------*/
