--- a/css/style.css
+++ b/css/style.css
@@ -778,6 +778,9 @@ body {
     margin-left: auto;
     margin-right: auto;
   }
+  .ner {
+    gap: 72px;
+  }
   /*.employees-ca:not(:last-child) {
     margin-bottom: 72px;
   }*/
