--- a/css/style.css
+++ b/css/style.css
@@ -144,11 +144,11 @@ body {
   content: "";
   position: absolute;
   display: flex;
-  width: 48px;
+  width: 100%;
   height: 4px;
   background-color: var(--accent-color);
   border-radius: 2px;
-  margin-top: 20px;
+  margin-top: 19px;
 }
 
 .contact-phone-number {
@@ -208,6 +208,10 @@ body {
 
 /*---------------------------комп-----------------*/
 @media screen and (min-width: 1200px) {
+  .page-header{
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
   .addr {
     display: flex;
     align-items: center;
@@ -221,16 +225,8 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
   }
-  .menu-lin::after {
-    content: "";
-    position: absolute;
-    display: flex;
-    width: 48px;
-    height: 4px;
-    background-color: var(--accent-color);
-    border-radius: 2px;
-    margin-top: 13px;
-  }
+  
+
 }
 /*---------------------------/комп-----------------*/
 /*-------------/хедер----------------------------------*/
@@ -489,6 +485,7 @@ body {
         rgba(46, 47, 66, 0.7)
       ),
       url("../images/mobile/dark-bg.jpg");
+      width: 100%;
   }
   .main-title {
     font-weight: 700;
@@ -516,6 +513,7 @@ body {
         rgba(46, 47, 66, 0.7)
       ),
       url("../images/tablet/dark-bgtab.jpg");
+      width: 100%;
   }
   .main-title {
     font-weight: 700;
@@ -538,11 +536,13 @@ body {
         rgba(46, 47, 66, 0.7)
       ),
       url("../images/desctop/people-office1.jpg");
+      width: 100%;
   }
   .main-title {
     max-width: 496px;
     margin-bottom: 36px;
   }
+
 }
 /*---------------------------/комп-----------------*/
 /*------------------------/хіро-----------------------*/
